--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import "./Pages/Enter/Enter.css";
 @import "./Pages/Home/Home.css";
 @import "./Pages/User/User.css";
 
@@ -127,6 +126,7 @@ body {
   background-color: gray;
   width: 400px;
   height: 600px;
+  overflow-y: auto;
 
   border: 2px solid black;
   border-radius: 20px;
@@ -136,6 +136,11 @@ body {
   justify-content: center;
   align-items: center;
   gap: 20px;
+
+  &.agendar {
+    justify-content: initial;
+    padding: 30px 0;
+  }
 
   legend {
     font-size: x-large;
